:meat_on_bone: more progress. - figured out the cloudinary issue; my request and cloudinary's response do not show up in the DOM. seems like when you request a jpg, it looks to see is your browser can handle a webp, and if so, sends it. in the DOM inspector, this change is not reflected, only in the network tab - cleaned up the html to suit - added a smaller image media query for the main image at the top, even though that image is still too big - also added an npm command to run gulp build and start a server so the compiled / minified code can be run through lighthouse

--- a/src/cube-styles/layouts/_photoGrid.scss
+++ b/src/cube-styles/layouts/_photoGrid.scss
@@ -158,6 +158,7 @@
   picture,
   figure,
   svg {
+    min-height: 10vh;
     max-width: unset;
     width: 100%;
   }
